--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,17 @@ dependencies {
 
     compile 'com.android.support:design:25.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
+
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'io.reactivex:rxjava:1.1.6'
+
+    compile 'com.squareup.retrofit2:retrofit:2.0.2'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
+
+    compile "com.squareup.okhttp3:okhttp-urlconnection:3.5.0"
+    compile 'com.squareup.okhttp3:logging-interceptor:3.5.0'
+
+    compile 'com.google.code.gson:gson:2.4'
     testCompile 'junit:junit:4.12'
 }
