--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.WithoutActionBar">
-        <activity android:name=".activities.main.MainActivity"
+        <activity android:name=".view.activities.main.MainActivity"
             android:label="@string/album_detail_label">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
